--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1206702185649949"
+    crossorigin="anonymous"></script>
+  <style>
+    .ad-container {
+      min-height: 100px;
+      margin: 2rem auto;
+      text-align: center;
+      max-width: 800px;
+    }
+  </style>
 
   <!-- Base Styles -->
   <style>
@@ -390,6 +401,13 @@
       </div>
       <!-- End Main Generator Form -->
 
+      <!-- Ad Unit: After Generator -->
+      <div class="ad-container">
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1206702185649949"
+          data-ad-slot="7438060059" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+      </div>
+
       <!-- Features Section -->
       <div class="features-grid container" id="features">
         <div class="feature">
@@ -467,6 +485,13 @@
         </div>
       </div>
       <!-- End CTA Section -->
+
+      <!-- Ad Unit: Before Footer -->
+      <div class="ad-container">
+        <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-1206702185649949"
+          data-ad-slot="4811896719" data-ad-format="auto" data-full-width-responsive="true"></ins>
+        <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+      </div>
 
       <!-- Footer Section -->
       <div style="background: #111827; color: white; text-align: center; padding: 40px 20px;">
