feat(pro): add color picker, corner styles, and 2 new QR patterns

--- a/logo-qr-code.html
+++ b/logo-qr-code.html
@@ -139,6 +139,28 @@
               <option value="dots">Dots</option>
               <option value="square">Classic</option>
               <option value="classy">Classy</option>
+              <option value="classy-rounded">Classy Rounded</option>
+              <option value="extra-rounded">Extra Rounded</option>
+            </select>
+          </div>
+          <div>
+            <label for="qr-color" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">QR
+              Color</label>
+            <div class="flex gap-2">
+              <input type="color" id="qr-color" value="#000000"
+                class="w-12 h-10 border border-gray-300 dark:border-gray-600 rounded-md cursor-pointer" />
+              <input type="text" id="qr-color-hex" value="#000000" placeholder="#000000"
+                class="flex-1 px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md bg-white dark:bg-gray-700 text-gray-900 dark:text-gray-100 font-mono text-sm" />
+            </div>
+          </div>
+          <div>
+            <label for="corner-style" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Corner
+              Style</label>
+            <select id="corner-style"
+              class="w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md bg-white dark:bg-gray-700 text-gray-900 dark:text-gray-100">
+              <option value="square">Square</option>
+              <option value="dot">Rounded</option>
+              <option value="extra-rounded">Extra Rounded</option>
             </select>
           </div>
         </form>
@@ -359,12 +381,23 @@ END:VCARD`;
       const updateQRCode = () => {
         const vCardString = generateVCardString();
         const selectedStyle = document.getElementById('qr-style').value;
+        const selectedColor = document.getElementById('qr-color').value;
+        const cornerStyle = document.getElementById('corner-style').value;
+
         qrCode.update({
           data: vCardString,
           image: logoImage || '',
           dotsOptions: {
-            color: '#000000',
+            color: selectedColor,
             type: selectedStyle
+          },
+          cornersSquareOptions: {
+            color: selectedColor,
+            type: cornerStyle
+          },
+          cornersDotOptions: {
+            color: selectedColor,
+            type: cornerStyle === 'extra-rounded' ? 'dot' : cornerStyle
           }
         });
 
@@ -375,8 +408,20 @@ END:VCARD`;
         }
       };
 
-      // Listen for style changes
+      // Listen for style/color/corner changes
       document.getElementById('qr-style').addEventListener('change', updateQRCode);
+      document.getElementById('qr-color').addEventListener('input', (e) => {
+        document.getElementById('qr-color-hex').value = e.target.value;
+        updateQRCode();
+      });
+      document.getElementById('qr-color-hex').addEventListener('input', (e) => {
+        const hex = e.target.value;
+        if (/^#[0-9A-Fa-f]{6}$/.test(hex)) {
+          document.getElementById('qr-color').value = hex;
+          updateQRCode();
+        }
+      });
+      document.getElementById('corner-style').addEventListener('change', updateQRCode);
 
       const handleLogoUpload = () => {
         logoUploadInput.click();
