feat: add Pro features highlight to homepage + create llm.txt

--- a/index.html
+++ b/index.html
@@ -267,6 +267,13 @@
             Bulk Generator for Teams <span aria-hidden="true">→</span>
           </a>
         </div>
+        <div
+          class="flex items-center gap-2 bg-gradient-to-r from-purple-500/20 to-pink-500/20 px-3 py-1 rounded-full border border-purple-400/30">
+          <span class="text-xs uppercase text-yellow-300 font-bold">Pro</span>
+          <a href="/logo-qr-code.html" class="inline-flex items-center gap-1 font-semibold text-white hover:underline">
+            Logos, Colors & Frames <span aria-hidden="true">→</span>
+          </a>
+        </div>
       </div>
 
       <div class="benefits">
@@ -391,12 +398,37 @@
         </div>
       </div>
 
-      <!-- New "Upgrade to Pro" CTA -->
-      <div style="text-align: center; margin-top: 40px; padding-top: 30px; border-top: 1px solid #e5e7eb;">
-        <h3 style="font-size: 1.25rem; font-weight: 600; color: #1f2937;">Want to Stand Out?</h3>
-        <p style="margin-top: 0.5rem; color: #6b7280;">Add your company logo for a professional, branded look.</p>
-        <a href="./logo-qr-code.html" class="btn" style="background: #4f46e5; margin-top: 1.5rem;">
-          ✨ Upgrade to Pro - Add Your Logo
+      <!-- Pro Features Section -->
+      <div
+        style="text-align: center; margin-top: 40px; padding: 30px; border-radius: 16px; background: linear-gradient(135deg, #f5f3ff 0%, #ede9fe 50%, #ddd6fe 100%);">
+        <h3 style="font-size: 1.5rem; font-weight: 700; color: #5b21b6; margin-bottom: 8px;">✨ Pro Features</h3>
+        <p style="color: #6b7280; margin-bottom: 24px;">Unlock powerful customization options for your QR codes</p>
+        <div
+          style="display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 16px; margin-bottom: 24px;">
+          <div style="background: white; padding: 16px; border-radius: 12px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <div style="font-size: 1.75rem; margin-bottom: 8px;">🖼️</div>
+            <strong style="color: #1f2937;">Logo Overlay</strong>
+            <p style="font-size: 0.875rem; color: #6b7280; margin-top: 4px;">Brand your QR</p>
+          </div>
+          <div style="background: white; padding: 16px; border-radius: 12px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <div style="font-size: 1.75rem; margin-bottom: 8px;">🎨</div>
+            <strong style="color: #1f2937;">Custom Colors</strong>
+            <p style="font-size: 0.875rem; color: #6b7280; margin-top: 4px;">QR + background</p>
+          </div>
+          <div style="background: white; padding: 16px; border-radius: 12px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <div style="font-size: 1.75rem; margin-bottom: 8px;">🏷️</div>
+            <strong style="color: #1f2937;">Frame Templates</strong>
+            <p style="font-size: 0.875rem; color: #6b7280; margin-top: 4px;">"Scan Me" & more</p>
+          </div>
+          <div style="background: white; padding: 16px; border-radius: 12px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
+            <div style="font-size: 1.75rem; margin-bottom: 8px;">📐</div>
+            <strong style="color: #1f2937;">SVG Downloads</strong>
+            <p style="font-size: 0.875rem; color: #6b7280; margin-top: 4px;">Hi-res, scalable</p>
+          </div>
+        </div>
+        <a href="./logo-qr-code.html" class="btn"
+          style="background: linear-gradient(135deg, #7c3aed, #a855f7); padding: 12px 32px; font-size: 1rem;">
+          Try Pro Features →
         </a>
       </div>
       <!-- End Main Generator Form -->
