feat: add Simple Analytics (privacy-first) to all main pages

--- a/bulk-qr-code.html
+++ b/bulk-qr-code.html
@@ -52,6 +52,8 @@
         gtag('js', new Date());
         gtag('config', 'G-E90B41BNEH');
     </script>
+    <!-- 100% privacy-first analytics -->
+    <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 
     <!-- PPP (Purchase Power Parity) Detection -->
     <script>
