--- a/logo-qr-code.html
+++ b/logo-qr-code.html
@@ -20,6 +20,8 @@
       }
     }
   </script>
+  <!-- 100% privacy-first analytics -->
+  <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   <style>
     /* Hide Pro app until gate passes to avoid FOUC */
     html:not(.pro-ok) body {
