--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
   <!-- Google AdSense -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1206702185649949"
     crossorigin="anonymous"></script>
+  <!-- 100% privacy-first analytics -->
+  <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
   <style>
     .ad-container {
       min-height: 100px;
