feat: overhaul landing pages (logo, bulk, guide) with high-converting content

--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
   <!-- Hero Section -->
   <div class="hero">
     <div class="container">
-      <h1>Create Professional vCard QR Codes in Seconds</h1>
-      <p class="subtitle">Transform your networking with instant digital business cards. No app required — just scan and
-        save!</p>
+      <h1>Get More Leads with Digital Business Cards</h1>
+      <p class="subtitle">Stop losing contacts. Share your details instantly with a professional vCard QR code. No app
+        required.</p>
 
       <div class="mt-6 flex flex-wrap items-center justify-center gap-6 text-sm text-indigo-100">
         <div class="flex items-center gap-2">
@@ -302,6 +302,34 @@
     </div>
   </div>
   <!-- End Hero -->
+
+  <!-- Use Cases Section (New) -->
+  <div class="bg-gray-50 border-b border-gray-200 py-12">
+    <div class="container mx-auto px-4 max-w-6xl">
+      <p class="text-center text-sm font-bold text-indigo-600 uppercase tracking-widest mb-8">Trusted by Professionals
+        in Every Industry</p>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
+        <div class="p-8 bg-white rounded-xl shadow-sm border border-gray-100 hover:shadow-md transition-shadow">
+          <div class="text-4xl mb-4">🏠</div>
+          <h3 class="font-bold text-xl text-gray-900 mb-2">For Realtors</h3>
+          <p class="text-gray-600 leading-relaxed">Place on "For Sale" signs. Capture buyer leads instantly instead of
+            losing them to voicemail.</p>
+        </div>
+        <div class="p-8 bg-white rounded-xl shadow-sm border border-gray-100 hover:shadow-md transition-shadow">
+          <div class="text-4xl mb-4">🤝</div>
+          <h3 class="font-bold text-xl text-gray-900 mb-2">For Sales Teams</h3>
+          <p class="text-gray-600 leading-relaxed">Ditch paper cards. Seamless contact exchange at conferences builds
+            your pipeline faster.</p>
+        </div>
+        <div class="p-8 bg-white rounded-xl shadow-sm border border-gray-100 hover:shadow-md transition-shadow">
+          <div class="text-4xl mb-4">🩺</div>
+          <h3 class="font-bold text-xl text-gray-900 mb-2">For Doctors</h3>
+          <p class="text-gray-600 leading-relaxed">Let patients save clinic details and appointment booking links in one
+            tap.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Main Generator Form -->
   <div class="container">
