--- a/index.html
+++ b/index.html
@@ -558,6 +558,34 @@
       <!-- Footer Section -->
       <div style="background: #111827; color: white; text-align: center; padding: 40px 20px;">
         <div class="container">
+          <!-- Internal Linking Grid -->
+          <div class="mb-12 border-b border-gray-800 pb-8">
+            <h4 class="text-gray-400 font-semibold mb-6 uppercase tracking-wider text-sm">Popular Professional Tools
+            </h4>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-sm text-center md:text-left">
+              <a href="/p/real-estate-agent-new-york/" class="text-gray-500 hover:text-white transition">Real Estate
+                Agent NY</a>
+              <a href="/p/real-estate-agent-los-angeles/" class="text-gray-500 hover:text-white transition">Real Estate
+                Agent LA</a>
+              <a href="/p/real-estate-agent-miami/" class="text-gray-500 hover:text-white transition">Real Estate Agent
+                Miami</a>
+              <a href="/p/recruiter-san-francisco/" class="text-gray-500 hover:text-white transition">Recruiters SF</a>
+              <a href="/p/sales-representative-new-york/" class="text-gray-500 hover:text-white transition">Sales Reps
+                NY</a>
+              <a href="/p/event-planner-las-vegas/" class="text-gray-500 hover:text-white transition">Event Planners
+                Vegas</a>
+              <a href="/p/wedding-planner-los-angeles/" class="text-gray-500 hover:text-white transition">Wedding
+                Planners LA</a>
+              <a href="/p/photographer-new-york/" class="text-gray-500 hover:text-white transition">Photographers NY</a>
+              <a href="/p/personal-trainer-miami/" class="text-gray-500 hover:text-white transition">Personal Trainers
+                Miami</a>
+              <a href="/p/hair-stylist-new-york/" class="text-gray-500 hover:text-white transition">Hair Stylists NY</a>
+              <a href="/p/plumber-chicago/" class="text-gray-500 hover:text-white transition">Plumbers Chicago</a>
+              <a href="/p/electrician-houston/" class="text-gray-500 hover:text-white transition">Electricians
+                Houston</a>
+            </div>
+          </div>
+
           <p>&copy; 2026 vCard QR Code Generator. Made with ❤️ for modern professionals.</p>
           <div style="margin-top: 20px;">
             <a href="https://www.uneed.best/tool/vcard-qr-code-generator" target="_blank" rel="noopener">
