fix: adsense remediation job-01 completion

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -20,7 +20,7 @@
         <div class="bg-white dark:bg-gray-800 p-8 rounded-xl shadow-lg border border-gray-200 dark:border-gray-700">
             <header class="text-center mb-8">
                 <h1 class="text-3xl font-bold text-gray-900 dark:text-white">Terms of Service</h1>
-                <p class="mt-2 text-gray-600 dark:text-gray-400">Last Updated: October 12, 2025</p>
+                <p class="mt-2 text-gray-600 dark:text-gray-400">Last Updated: February 26, 2026</p>
             </header>
 
             <div class="legal-content text-gray-700 dark:text-gray-300">
@@ -30,7 +30,7 @@
                 <p>vCard QR Code Generator provides a free tool for creating vCard QR codes. We also offer paid "Pro" features, such as adding a logo to the QR code, which are accessible via a one-time payment.</p>
 
                 <h2>2. Payments</h2>
-                <p>Payments for Pro features are processed through our third-party payment processor, Stripe. By making a purchase, you agree to abide by the payment processor's terms of service. All prices are listed in USD or the equivalent in your local currency as determined by the payment processor.</p>
+                <p>Payments for Pro features are processed through our third-party payment processor, Dodo Payments. By making a purchase, you agree to abide by the payment processor's terms of service. All prices are listed in USD or the equivalent in your local currency as determined by the payment processor.</p>
                 
                 <h2>3. Cancellation and Refund Policy</h2>
                 <p>This section outlines our policy regarding cancellations and refunds, in compliance with Indian consumer protection laws.</p>
