--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,36 +9,67 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; }
-        .legal-content h2 { font-size: 1.5rem; font-weight: 600; margin-top: 2rem; margin-bottom: 1rem; color: #111827; }
-        .dark .legal-content h2 { color: #fff; }
-        .legal-content p { margin-bottom: 1rem; }
-        .legal-content ul { list-style-type: disc; margin-left: 1.5rem; margin-bottom: 1rem; }
+        body {
+            font-family: 'Inter', sans-serif;
+        }
+
+        .legal-content h2 {
+            font-size: 1.5rem;
+            font-weight: 600;
+            margin-top: 2rem;
+            margin-bottom: 1rem;
+            color: #111827;
+        }
+
+        .dark .legal-content h2 {
+            color: #fff;
+        }
+
+        .legal-content p {
+            margin-bottom: 1rem;
+        }
+
+        .legal-content ul {
+            list-style-type: disc;
+            margin-left: 1.5rem;
+            margin-bottom: 1rem;
+        }
     </style>
 </head>
+
 <body class="bg-gray-50 dark:bg-gray-900 text-gray-800 dark:text-gray-200">
     <div class="max-w-3xl mx-auto p-4 sm:p-6 lg:p-8">
         <div class="bg-white dark:bg-gray-800 p-8 rounded-xl shadow-lg border border-gray-200 dark:border-gray-700">
             <header class="text-center mb-8">
                 <h1 class="text-3xl font-bold text-gray-900 dark:text-white">Privacy Policy</h1>
-                <p class="mt-2 text-gray-600 dark:text-gray-400">Last Updated: October 12, 2025</p>
+                <p class="mt-2 text-gray-600 dark:text-gray-400">Last Updated: February 26, 2026</p>
             </header>
 
             <div class="legal-content text-gray-700 dark:text-gray-300">
-                <p>Your privacy is critically important to us. This Privacy Policy outlines how vCard QR Code Generator ("we", "us", or "our") handles your information.</p>
+                <p>Your privacy is critically important to us. This Privacy Policy outlines how vCard QR Code Generator
+                    ("we", "us", or "our") handles your information.</p>
 
                 <h2>1. Data Collection and Usage</h2>
-                <p><strong>vCard Information:</strong> All contact information you enter into the generator (name, phone, email, etc.) is processed exclusively within your web browser. This data is never sent to, stored on, or logged by our servers. Your contact information remains private to you.</p>
-                <p><strong>Analytics:</strong> We use Google Analytics to collect anonymous traffic data to understand how our visitors use the website. This includes information like page views, session duration, and browser type. This data is aggregated and cannot be used to identify you personally.</p>
+                <p><strong>vCard Information:</strong> All contact information you enter into the generator (name,
+                    phone, email, etc.) is processed exclusively within your web browser. This data is never sent to,
+                    stored on, or logged by our servers. Your contact information remains private to you.</p>
+                <p><strong>Analytics:</strong> We use Google Analytics to collect anonymous traffic data to understand
+                    how our visitors use the website. This includes information like page views, session duration, and
+                    browser type. This data is aggregated and cannot be used to identify you personally.</p>
 
                 <h2>2. Payments</h2>
-                <p>When you purchase a Pro feature, your payment is handled directly by our payment processor, Dodo Payments. We do not collect, see, or store your credit card details. Please refer to Dodo Payments' privacy policy for information on how they handle your payment data.</p>
+                <p>When you purchase a Pro feature, your payment is handled directly by our payment processor, Dodo
+                    Payments. We do not collect, see, or store your credit card details. Please refer to Dodo Payments'
+                    privacy policy for information on how they handle your payment data.</p>
 
                 <h2>3. Cookies &amp; Consent</h2>
-                <p>We use cookies for analytics (Google Analytics) and advertising (Google AdSense). When you first visit our site, a consent banner asks whether you accept or reject non-essential cookies. Your choice is saved in your browser's local storage.</p>
+                <p>We use cookies for analytics (Google Analytics) and advertising (Google AdSense). When you first
+                    visit our site, a consent banner asks whether you accept or reject non-essential cookies. Your
+                    choice is saved in your browser's local storage.</p>
                 <ul style="margin-left:1.5rem;list-style:disc">
                     <li><strong>If you accept:</strong> Analytics and advertising cookies are enabled.</li>
-                    <li><strong>If you reject:</strong> No analytics or advertising cookies are set. Only essential functionality is available.</li>
+                    <li><strong>If you reject:</strong> No analytics or advertising cookies are set. Only essential
+                        functionality is available.</li>
                 </ul>
                 <p>You can change your preference at any time by clearing your browser's local storage or site data.</p>
 
@@ -51,7 +83,10 @@
                 </ul>
 
                 <h2>5. Contact Us</h2>
-                <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:contact@vcardqrcodegenerator.com" class="text-blue-600 dark:text-blue-400 hover:underline">contact@vcardqrcodegenerator.com</a>.</p>
+                <p>If you have any questions about this Privacy Policy, please contact us at <a
+                        href="mailto:contact@vcardqrcodegenerator.com"
+                        class="text-blue-600 dark:text-blue-400 hover:underline">contact@vcardqrcodegenerator.com</a>.
+                </p>
             </div>
 
             <footer class="text-center mt-12 pt-6 border-t border-gray-200 dark:border-gray-700">
@@ -60,4 +95,5 @@
         </div>
     </div>
 </body>
+
 </html>
